--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <style>
                 .page_layout{
                     background-color: white;
+                    width: 100%;
                     display: grid;
                     grid-template-columns: 1fr, 1fr, 1fr;
                     grid-template-rows: 1fr, 1fr, 1fr, 1fr;
@@ -18,7 +19,21 @@
                         "footer footer footer";
                     }
             </style>
-            <div class="left_header">
+            <div class="right_header"> <!--this is the icons/links that are set to the top right-->
+                <style>
+                    .right_header{
+                        grid-area: r_header;
+                    }
+                </style>
+                <!--gmail, images, apps and account-->
+                <a href="https://mail.google.com/mail/?authuser=0&ogbl">Gmail</a>
+                <a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Images</a>
+                <a href="https://www.google.com/intl/en/about/products" role="button" title="Google apps">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z"/></svg>
+                <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ" role="button" title="Google account">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM7.07 18.28c.43-.9 3.05-1.78 4.93-1.78s4.51.88 4.93 1.78C15.57 19.36 13.86 20 12 20s-3.57-.64-4.93-1.72zm11.29-1.45c-1.43-1.74-4.9-2.33-6.36-2.33s-4.93.59-6.36 2.33C4.62 15.49 4 13.82 4 12c0-4.41 3.59-8 8-8s8 3.59 8 8c0 1.82-.62 3.49-1.64 4.83zM12 6c-1.94 0-3.5 1.56-3.5 3.5S10.06 13 12 13s3.5-1.56 3.5-3.5S13.94 6 12 6zm0 5c-.83 0-1.5-.67-1.5-1.5S11.17 8 12 8s1.5.67 1.5 1.5S12.83 11 12 11z"/></svg>
+            </div>
+            <div class="left_header"> <!--for the links that are set to the top left: about and store-->
                 <style>
                     .left_header{
                         grid-area: l_header;
@@ -28,7 +43,24 @@
                 <a href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
             </div>
             <div class="logo">
+                <style>
+                    .logo{
+                        grid-area: main;
+                    }
+                </style>
                 <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+            </div>
+            <div class="search_bar">
+                <style>
+                    .search_bar input[type=text]{
+                        width: 300px;
+                        border: 5;
+                        padding: 2px;
+                        margin-top: 100px;
+                        font-size: 14px;
+                    }
+                </style>
+                <input type="text" placeholder="Search" title="Search">
             </div>
         </div>
 
