--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
                     background-color: white;
                     width: 100%;
                     display: grid;
-                    grid-template-columns: 1fr, 1fr, 1fr;
-                    grid-template-rows: 1fr, 1fr, 1fr, 1fr;
-                    grid-template-areas: 
-                        "l_header r_header r_header"
-                        "main main main"
-                        "blank blank blank"
-                        "footer footer footer";
+                    grid-template-columns: auto;
+                    grid-template-rows: auto, auto, auto;
+                    grid-gap: 50px;
+                    grid-template-areas:
+                        "header"
+                        "main"
+                        "bar";
                     }
             </style>
             <div class="right_header"> <!--this is the icons/links that are set to the top right-->
                 <style>
                     .right_header{
-                        grid-area: r_header;
+                        grid-area: header;
+                        justify-self: right;
                     }
                 </style>
                 <!--gmail, images, apps and account-->
@@ -36,7 +37,8 @@
             <div class="left_header"> <!--for the links that are set to the top left: about and store-->
                 <style>
                     .left_header{
-                        grid-area: l_header;
+                        grid-area: header;
+                        justify-self: left;
                     }
                 </style>
                 <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
@@ -46,21 +48,19 @@
                 <style>
                     .logo{
                         grid-area: main;
+                        justify-self: center;
                     }
                 </style>
-                <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+                <img height="92" width="272" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google">
             </div>
             <div class="search_bar">
                 <style>
-                    .search_bar input[type=text]{
-                        width: 300px;
-                        border: 5;
-                        padding: 2px;
-                        margin-top: 100px;
-                        font-size: 14px;
+                    .search_bar{
+                        grid-area: bar;
+                        justify-self: center;
                     }
                 </style>
-                <input type="text" placeholder="Search" title="Search">
+                <input type="text" placeholder="Search" title="Search" width=292px font-size=16px>
             </div>
         </div>
 
